@@ -104,7 +104,7 @@ sub finish {
 sub flash {
   my $self = shift;
 
-  # Get
+  # Check old flash
   my $session = $self->stash->{'mojo.session'};
   if ($_[0] && !defined $_[1] && !ref $_[0]) {
     return unless ref $session eq 'HASH';
@@ -112,8 +112,8 @@ sub flash {
     return $flash->{$_[0]};
   }
 
-  # Set
-  my $flash = $session->{new_flash} ||= {};
+  # Initialize new flash
+  my $flash = $self->session->{new_flash} ||= {};
   %$flash = (%$flash, %{@_ > 1 ? {@_} : $_[0]});
 
   return $self;
